<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Caja de texto (EditText) -->
    <EditText
        android:id="@+id/editText"
        android:layout_width="269dp"
        android:layout_height="95dp"
        android:contentDescription="Genera aleatoriamente valores válidos para este campo."
        android:hint="Introduce valores"
        android:inputType="text" />
    <!-- Botón para guardar el texto -->
    <Button
        android:id="@+id/buttonSaveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar" />
    <!-- Botón para cambiar el texto -->
    <Button
        android:id="@+id/buttonChangeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cambiar texto" />


</LinearLayout>
